Implementing sizing & positioning for Block components, installing d3 for nice graph viz

--- a/src/components/Block.css
+++ b/src/components/Block.css
@@ -1,5 +1,5 @@
 .block {
-    padding: 20px 0;
+    padding: 20px 0px;
     display: flex;
     align-content: center;
     justify-content: center;
